# CTFs-Writeups-2026

./: README.md
BlueHens_CTF_2026/challenges/: Hell_is_haard
DawgCTF_2026/challenges/: I_Hate_Physics  artemis_gordon  cheater_cheater  cipher_craft  data_split  dust  freq_3000  genz  grecian_battleship  just_print_it  love_bacon  machine_learning  metamorphosis  protocol_analysis  stacking_flags  stacking_melodies  stomach  teleleak  the_step  vault_breaker
Hens_Mixed_2026/challenges/: CONNETICUT-SERVER_COMPONENTS  _hens_can_type  awww...ward  bawker  conneticut-hit_your_limit  conneticut-wiretap  eggs_over_easy  freakquency  hell_is_hard  hiding_in_plain_sight-Dawg  lock_and_key  looking_down  maginc_link_web  memo_text  misc-dawg CTF  red_hearing  squirre-pretend-it-is-a-text-editor  squirrel-hackersB00ted  squirrel-magnolia  squirrel-misc-pcap  squirrel-todo  squirrel-web-blog  story_time  temporal  you_said_what
Incognito_7_0_2026/challenges/: el_camino_del_elegido  entropy  grawlix  look_out  never_gonna_give_you_flag  scheduler  the_asymptote  thunder_blaze  unnamed_challenge
Index_2026_TAMUctf/challenges/: A_Massive_Problem  Are_ya_winning_son  Brainiac  Catacombs  Debug_Disaster  Dog_barking  Escape_Room  Faultline  INSERT_CHALLENGE_TITLE_HERE  Intern_Portal  Larping_101  Robots  SAM_I_am  Say_My_Name  Temporary_Destruction  The_Evil_Files  The_Onion  Theres_no_room_left  Very_Expansive  call_me
Midnight_Flag_CTF_EXECUTION_2026/challenges/: DevilDiagram  DukesDBar  pub  (+6 more)
Ramadan_CTF_2026/ramadan/jitstream-pwn-ramadan/writeup_extracted/: args.gn  v8.patch
(+2187 files in other folders)
